@@ -6,6 +6,12 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres
 to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [6.16.25] - 2026-08-06
+
+### Fixed
+
+- **Documentation Audit**: Corrected evaluation scenario count from 34 to 35 across docs, skills, and test comments; updated README Tech Stack table to reflect `:codegen` as a Kotlin Multiplatform module with JVM + JS targets; removed obsolete JDK flag `--sun-misc-unsafe-memory-access=allow` from `build.gradle.kts` and README.
+
 ## [6.16.24] - 2026-08-06
 
 ### Fixed
